--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.22",
+    "axios": "^0.18.0",
+    "graphql": "^14.0.2",
+    "rc-queue-anim": "^1.6.8",
     "react": "^16.6.3",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-icons": "^3.2.2",
+    "react-scripts": "2.1.1",
+    "react-spring": "^6.1.10",
+    "react-transition-group": "^2.5.0",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint **/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0"
+  }
 }
