--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
+    "react-github-login": "^1.0.3",
     "react-icons": "^3.2.2",
     "react-scripts": "2.1.1",
     "react-spring": "^6.1.10",
